--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/aetienne-ember.css">
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/aetienne.comEmber.css">
 
     {{content-for "head-footer"}}
   </head>
@@ -22,7 +22,7 @@
     {{content-for "body"}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/aetienne-ember.js"></script>
+    <script src="{{rootURL}}assets/aetienne.comEmber.js"></script>
 
     {{content-for "body-footer"}}
   </body>
